--- a/L01/index.html
+++ b/L01/index.html
@@ -11,9 +11,6 @@
 
 <nav>
     <a href="/EIA1_WISe23/L01/seoul.html">More Info about Seoul </a>
-</nav>
-
-<nav>
     <a href="/EIA1_WISe23/L01/credits.html">Credits</a>
 </nav>
 
@@ -21,7 +18,9 @@
 
     <main>
         
-        <h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/2560px-Flag_of_South_Korea.svg.png" alt="korean flag" width="50" height="30"> Southkorea <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/2560px-Flag_of_South_Korea.svg.png" alt="korean flag" width="50" height="30"></h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/2560px-Flag_of_South_Korea.svg.png" alt="korean flag" width="50" height="30"> 
+        <h1>Southkorea</h1> 
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/2560px-Flag_of_South_Korea.svg.png" alt="korean flag" width="50" height="30">
 
     <article>
             <h2>Travelling</h2>
@@ -43,8 +42,7 @@
 
     </main>
 
-    <footer>definitely not the creator of this site  </footer>
-    
-    <footer>Immatrikulationsnummer Error404</footer>
+    <footer>definitely not the creator of this site 
+        Immatrikulationsnummer Error404</footer>
 </body>
 </html>
