--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Formular mit Rahmen</title>
 </head>
 <body>
-    
+
+  <div class="form-group">
+    <label for="frage" class="question">Deine Frage:</label>
+    <input type="text" id="frage" class="input-field" placeholder="Antwort hier eingeben">
+  </div>
+
 </body>
 </html>
