--- a/test/index.html
+++ b/test/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Formular mit Rahmen</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="dat.gui.min.js" defer ></script>
+    <script src="test/eia1_voyager_sdk.js" defer ></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="form-group">
-    <label for="frage" class="question">Deine Frage:</label>
-    <input type="text" id="frage" class="input-field" placeholder="Antwort hier eingeben">
-  </div>
-
+    <h1>hallo</h1>
+    <h2>welt</h2>
 </body>
 </html>
