--- a/Final/index.html
+++ b/Final/index.html
@@ -1,20 +1,22 @@
-<!-- HTML-Datei -->
-
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taschenuhr-Stoppuhr</title>
+  <title>Stoppuhr</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
+
 <body>
   <div class="watch">
-    <button class="button" onclick="startStop()">Start / Stop</button>
+    <button class="button" onclick="start()">Start</button>
+    <button class="button" onclick="stop()">Stop</button>
+    <button class="button" onclick="round()">Runde</button>
+    <button class="button" onclick="reset()">Reset</button>
     <div class="time" id="display">00:00:00</div>
   </div>
-
-  <script src="script.js"></script>
 </body>
+
 </html>
